# Projet_mlops

./: .gitignore  Doc_Projet_MLOPS.ipynb  README.md  Rapport_d’analyse_exploratoire.ipynb  analyse_meilleiur_modele.ipynb  data_drift.py  data_drift_report.html  dockerfile  insertion.py  pyproject.toml  requirements.txt
src/: data_loading.py  main.py
src/app/: app.py
src/train/: gradient_boosting.py  linear_regression.py  random_forest.py
src/web/: streamlit.py
